// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`selectInputField > should display right value on grouped options 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
}

.emotion-2 {
  display: grid;
  width: 100%;
  gap: 0.5rem;
  grid-template-columns: 1fr auto;
  padding: 0.5rem;
  padding-right: 0;
  padding-left: 1rem;
  cursor: pointer;
  box-shadow: none;
  background: #ffffff;
  border-radius: 0.25rem;
  width: 100%;
}

.emotion-2[data-size='small'] {
  height: 2rem;
  padding-left: 0.5rem;
}

.emotion-2[data-size='medium'] {
  height: 2.5rem;
}

.emotion-2[data-size='large'] {
  height: 3rem;
}

.emotion-2[data-state='neutral'] {
  border: 1px solid #d9dadd;
}

.emotion-2[data-state='neutral']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-2[data-state='neutral']:not([data-disabled='true']):hover {
  border-color: #792dd4;
  outline: none;
}

.emotion-2[data-state='neutral']:not([data-disabled='true']):focus-visible {
  outline: 5px auto Highlight;
  outline: 5px auto -webkit-focus-ring-color;
}

.emotion-2[data-state='neutral'][data-dropdownvisible='true'] {
  border-color: #792dd4;
}

.emotion-2[data-state='success'] {
  border: 1px solid #22674e;
}

.emotion-2[data-state='success']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #1b533f;
  box-shadow: 0px 0px 0px 3px #45d19f40;
}

.emotion-2[data-state='success'][data-dropdownvisible='true'] {
  border-color: #1b533f;
}

.emotion-2[data-state='danger'] {
  border: 1px solid #b3144d;
}

.emotion-2[data-state='danger']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #92103f;
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-2[data-state='danger'][data-dropdownvisible='true'] {
  border-color: #92103f;
}

.emotion-2:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-2[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
  cursor: default;
}

.emotion-2[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.emotion-4 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-6 {
  padding-right: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 {
  width: 90%;
  min-width: 320px;
  background-color: #ffffff;
  color: #3f4250;
  box-shadow: 0px 4px 8px 0px #22263829,0px 8px 24px 0px #2226383d;
  padding: 0rem;
  margin-bottom: 5rem;
}

.emotion-10 {
  max-height: 256px;
  overflow-y: auto;
  padding: 0rem;
  padding-bottom: 0.25rem;
  padding-top: 0.25rem;
}

.emotion-10[data-grouped="true"] {
  padding-top: 0rem;
}

.emotion-12 {
  position: -webkit-sticky;
  position: sticky;
  top: 0;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-box-pack: left;
  -ms-flex-pack: left;
  -webkit-justify-content: left;
  justify-content: left;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  background-color: #f9f9fa;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  padding-right: 1rem;
  padding-left: 1rem;
  height: 2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: left;
  margin-bottom: 0.125rem;
}

.emotion-14:focus {
  background-color: #f9f9fa;
  outline: none;
}

.emotion-14[data-selectgroup='true'] {
  padding-left: 1rem;
  border-left: 0.25rem solid #f9f9fa;
}

.emotion-14[data-selectgroup='true']:focus {
  background-color: #e9eaeb;
}

.emotion-16 {
  text-align: left;
  border: none;
  background-color: #ffffff;
  padding: 0.75rem 1rem 0.75rem 1rem;
  margin-left: 0.25rem;
  margin-right: 0.25rem;
  color: #3f4250;
  border-radius: 0.25rem;
  border: 1px transparent solid;
}

.emotion-16:hover,
.emotion-16:focus {
  background-color: #f1eefc;
  color: #641cb3;
  cursor: pointer;
}

.emotion-16[aria-selected='true'] {
  background-color: #f1eefc;
}

.emotion-16[aria-disabled="true"] {
  background-color: #f3f3f4;
  color: #b5b7bd;
}

.emotion-16[aria-disabled="true"]:hover,
.emotion-16 [aria-disabled="true"]:focus {
  background-color: #f3f3f4;
  color: #b5b7bd;
  cursor: not-allowed;
  outline: none;
}

.emotion-18 {
  overflow: hidden;
}

.emotion-20 {
  overflow: auto;
  text-overflow: ellipsis;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  max-width: 100%;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        aria-label="test"
        class="emotion-0 emotion-1"
      >
        <div
          aria-controls="«rl»"
          aria-describedby="«rl»"
          class="uv_w40vpo9 uv_w40vpob"
          tabindex="-1"
        >
          <div
            class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          >
            <div
              aria-controls="«rl»"
              aria-expanded="true"
              aria-label=""
              class="emotion-2 emotion-3"
              data-disabled="false"
              data-dropdownvisible="true"
              data-readonly="false"
              data-size="large"
              data-state="neutral"
              data-testid="select-input-test"
              id="«rk»"
              role="combobox"
              tabindex="0"
            >
              <span
                class="emotion-4 emotion-5 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
              >
                Mercury
              </span>
              <div
                class="emotion-6 emotion-7 uv_toi52u0 uv_toi52u3d uv_toi52u2j uv_toi52u7d uv_toi52u7 uv_toi52u5d"
              >
                <svg
                  aria-label="show dropdown"
                  class="styles__1sbwqkz0 styles_prominence_default__1sbwqkzg styles_disabled_false__1sbwqkzf styles_sentiment_neutral__1sbwqkz3 styles_size_small__1sbwqkza styles_undefined_compound_34__1sbwqkz1i"
                  viewBox="0 0 16 16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="emotion-8 emotion-9 uv_w40vpo4 null"
            id="«rl»"
            role="dialog"
            style="--uv_ozfz3c0: -5px; --uv_ozfz3c1: 0px; --uv_ozfz3c2:  rotate(180deg); --uv_ozfz3c4: translate3d(0px, 4px, 0); --uv_ozfz3c5: 0ms; --uv_ozfz3c6: translate3d(0px, 4px, 0); --uv_ozfz3c7: 100%; opacity: 1;"
          >
            <div
              class="uv_w40vpo2"
            >
              <div
                class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u5d"
              >
                <div
                  class="emotion-10 emotion-11 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u5d"
                  data-grouped="true"
                  id="select-dropdown"
                  role="listbox"
                >
                  <div
                    class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u21 uv_toi52u5d"
                  >
                    <div
                      class="emotion-12 emotion-13"
                    >
                      <button
                        class="emotion-14 emotion-15"
                        data-selectgroup="false"
                        data-testid="group-0"
                        role="group"
                        tabindex="-1"
                        type="button"
                      >
                        <span
                          class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9ows uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                          style="--uv_qabug40: left;"
                        >
                          JOVIAN PLANETS
                        </span>
                      </button>
                    </div>
                    <div
                      class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u21 uv_toi52u5d"
                      id="items"
                    >
                      <div
                        aria-disabled="false"
                        aria-label="jupiter"
                        aria-selected="false"
                        class="emotion-16 emotion-17"
                        data-testid="option-jupiter"
                        id="option-0"
                        role="option"
                        tabindex="0"
                      >
                        <div
                          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
                          data-testid="option-stack-jupiter"
                        >
                          <div
                            class="emotion-18 emotion-19 uv_toi52u0 uv_toi52u31 uv_toi52u2j uv_toi52u7d uv_toi52u1v uv_toi52u6p"
                          >
                            <span
                              class="emotion-20 emotion-21 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow3c"
                              style="--uv_qabug40: left;"
                            >
                              Jupiter
                            </span>
                          </div>
                          <span
                            class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9own uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
                            style="--uv_qabug40: left;"
                          >
                            Jupiter is the fifth planet from the Sun and the largest in the Solar System. It is a gas giant with a mass more than two and a half times that of all the other planets in the Solar System combined, and slightly less than one one-thousandth the mass of the Sun.
                          </span>
                        </div>
                      </div>
                      <div
                        aria-disabled="false"
                        aria-label="saturn"
                        aria-selected="false"
                        class="emotion-16 emotion-17"
                        data-testid="option-saturn"
                        id="option-1"
                        role="option"
                        tabindex="0"
                      >
                        <div
                          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
                          data-testid="option-stack-saturn"
                        >
                          <div
                            class="emotion-18 emotion-19 uv_toi52u0 uv_toi52u31 uv_toi52u2j uv_toi52u7d uv_toi52u1v uv_toi52u6p"
                          >
                            <span
                              class="emotion-20 emotion-21 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow3c"
                              style="--uv_qabug40: left;"
                            >
                              Saturn
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        aria-disabled="false"
                        aria-label="uranus"
                        aria-selected="false"
                        class="emotion-16 emotion-17"
                        data-testid="option-uranus"
                        id="option-2"
                        role="option"
                        tabindex="0"
                      >
                        <div
                          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
                          data-testid="option-stack-uranus"
                        >
                          <div
                            class="emotion-18 emotion-19 uv_toi52u0 uv_toi52u31 uv_toi52u2j uv_toi52u7d uv_toi52u1v uv_toi52u6p"
                          >
                            <span
                              class="emotion-20 emotion-21 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow3c"
                              style="--uv_qabug40: left;"
                            >
                              Uranus
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        aria-disabled="false"
                        aria-label="neptune"
                        aria-selected="false"
                        class="emotion-16 emotion-17"
                        data-testid="option-neptune"
                        id="option-3"
                        role="option"
                        tabindex="0"
                      >
                        <div
                          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
                          data-testid="option-stack-neptune"
                        >
                          <div
                            class="emotion-18 emotion-19 uv_toi52u0 uv_toi52u31 uv_toi52u2j uv_toi52u7d uv_toi52u1v uv_toi52u6p"
                          >
                            <span
                              class="emotion-20 emotion-21 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow3c"
                              style="--uv_qabug40: left;"
                            >
                              Neptune
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u21 uv_toi52u5d"
                  >
                    <div
                      class="emotion-12 emotion-13"
                    >
                      <button
                        class="emotion-14 emotion-15"
                        data-selectgroup="false"
                        data-testid="group-1"
                        role="group"
                        tabindex="-1"
                        type="button"
                      >
                        <span
                          class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9ows uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                          style="--uv_qabug40: left;"
                        >
                          TERRESTRIAL PLANETS
                        </span>
                      </button>
                    </div>
                    <div
                      class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u21 uv_toi52u5d"
                      id="items"
                    >
                      <div
                        aria-disabled="false"
                        aria-label="mercury"
                        aria-selected="true"
                        class="emotion-16 emotion-17"
                        data-testid="option-mercury"
                        id="option-0"
                        role="option"
                        tabindex="0"
                      >
                        <div
                          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
                          data-testid="option-stack-mercury"
                        >
                          <div
                            class="emotion-18 emotion-19 uv_toi52u0 uv_toi52u31 uv_toi52u2j uv_toi52u7d uv_toi52u1v uv_toi52u6p"
                          >
                            <span
                              class="emotion-20 emotion-21 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow3c"
                              style="--uv_qabug40: left;"
                            >
                              Mercury
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        aria-disabled="false"
                        aria-label="venus"
                        aria-selected="false"
                        class="emotion-16 emotion-17"
                        data-testid="option-venus"
                        id="option-1"
                        role="option"
                        tabindex="0"
                      >
                        <div
                          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
                          data-testid="option-stack-venus"
                        >
                          <div
                            class="emotion-18 emotion-19 uv_toi52u0 uv_toi52u31 uv_toi52u2j uv_toi52u7d uv_toi52u1v uv_toi52u6p"
                          >
                            <span
                              class="emotion-20 emotion-21 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow3c"
                              style="--uv_qabug40: left;"
                            >
                              Venus
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        aria-disabled="false"
                        aria-label="earth"
                        aria-selected="false"
                        class="emotion-16 emotion-17"
                        data-testid="option-earth"
                        id="option-2"
                        role="option"
                        tabindex="0"
                      >
                        <div
                          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
                          data-testid="option-stack-earth"
                        >
                          <div
                            class="emotion-18 emotion-19 uv_toi52u0 uv_toi52u31 uv_toi52u2j uv_toi52u7d uv_toi52u1v uv_toi52u6p"
                          >
                            <span
                              class="emotion-20 emotion-21 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow3c"
                              style="--uv_qabug40: left;"
                            >
                              Earth
                            </span>
                          </div>
                          <span
                            class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9own uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
                            style="--uv_qabug40: left;"
                          >
                            Our home planet
                          </span>
                        </div>
                      </div>
                      <div
                        aria-disabled="true"
                        aria-label="mars"
                        aria-selected="false"
                        class="emotion-16 emotion-17"
                        data-testid="option-mars"
                        id="option-3"
                        role="option"
                        tabindex="-1"
                      >
                        <div
                          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
                          data-testid="option-stack-mars"
                        >
                          <div
                            class="emotion-18 emotion-19 uv_toi52u0 uv_toi52u31 uv_toi52u2j uv_toi52u7d uv_toi52u1v uv_toi52u6p"
                          >
                            <span
                              class="emotion-20 emotion-21 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow3c"
                              style="--uv_qabug40: left;"
                            >
                              Mars
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        aria-disabled="false"
                        aria-label="pluto"
                        aria-selected="false"
                        class="emotion-16 emotion-17"
                        data-testid="option-pluto"
                        id="option-4"
                        role="option"
                        tabindex="0"
                      >
                        <div
                          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
                          data-testid="option-stack-pluto"
                        >
                          <div
                            class="emotion-18 emotion-19 uv_toi52u0 uv_toi52u31 uv_toi52u2j uv_toi52u7d uv_toi52u1v uv_toi52u6p"
                          >
                            <span
                              class="emotion-20 emotion-21 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow3c"
                              style="--uv_qabug40: left;"
                            >
                              Pluto
                            </span>
                          </div>
                          <span
                            class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9own uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
                            style="--uv_qabug40: left;"
                          >
                            Pluto does not fit the usual classification of either terrestrial or Jovian planets, but is rocky
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`selectInputField > should render correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
}

.emotion-2 {
  display: grid;
  width: 100%;
  gap: 0.5rem;
  grid-template-columns: 1fr auto;
  padding: 0.5rem;
  padding-right: 0;
  padding-left: 1rem;
  cursor: pointer;
  box-shadow: none;
  background: #ffffff;
  border-radius: 0.25rem;
  width: 100%;
}

.emotion-2[data-size='small'] {
  height: 2rem;
  padding-left: 0.5rem;
}

.emotion-2[data-size='medium'] {
  height: 2.5rem;
}

.emotion-2[data-size='large'] {
  height: 3rem;
}

.emotion-2[data-state='neutral'] {
  border: 1px solid #d9dadd;
}

.emotion-2[data-state='neutral']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-2[data-state='neutral']:not([data-disabled='true']):hover {
  border-color: #792dd4;
  outline: none;
}

.emotion-2[data-state='neutral']:not([data-disabled='true']):focus-visible {
  outline: 5px auto Highlight;
  outline: 5px auto -webkit-focus-ring-color;
}

.emotion-2[data-state='neutral'][data-dropdownvisible='true'] {
  border-color: #792dd4;
}

.emotion-2[data-state='success'] {
  border: 1px solid #22674e;
}

.emotion-2[data-state='success']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #1b533f;
  box-shadow: 0px 0px 0px 3px #45d19f40;
}

.emotion-2[data-state='success'][data-dropdownvisible='true'] {
  border-color: #1b533f;
}

.emotion-2[data-state='danger'] {
  border: 1px solid #b3144d;
}

.emotion-2[data-state='danger']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #92103f;
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-2[data-state='danger'][data-dropdownvisible='true'] {
  border-color: #92103f;
}

.emotion-2:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-2[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
  cursor: default;
}

.emotion-2[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.emotion-4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-6 {
  padding-right: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        aria-label="test"
        class="emotion-0 emotion-1"
      >
        <div
          aria-controls="«r1»"
          aria-describedby="«r1»"
          class="uv_w40vpo9 uv_w40vpob"
          tabindex="-1"
        >
          <div
            class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          >
            <div
              aria-controls="«r1»"
              aria-expanded="false"
              aria-label=""
              class="emotion-2 emotion-3"
              data-disabled="false"
              data-dropdownvisible="false"
              data-readonly="false"
              data-size="large"
              data-state="neutral"
              data-testid="select-input-test"
              id="«r0»"
              role="combobox"
              tabindex="0"
            >
              <span
                class="emotion-4 emotion-5 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owm uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
              >
                Select item
              </span>
              <div
                class="emotion-6 emotion-7 uv_toi52u0 uv_toi52u3d uv_toi52u2j uv_toi52u7d uv_toi52u7 uv_toi52u5d"
              >
                <svg
                  aria-label="show dropdown"
                  class="styles__1sbwqkz0 styles_prominence_default__1sbwqkzg styles_disabled_false__1sbwqkzf styles_sentiment_neutral__1sbwqkz3 styles_size_small__1sbwqkza styles_undefined_compound_34__1sbwqkz1i"
                  viewBox="0 0 16 16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`selectInputField > should render correctly disabled 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
}

.emotion-2 {
  display: grid;
  width: 100%;
  gap: 0.5rem;
  grid-template-columns: 1fr auto;
  padding: 0.5rem;
  padding-right: 0;
  padding-left: 1rem;
  cursor: pointer;
  box-shadow: none;
  background: #ffffff;
  border-radius: 0.25rem;
  width: 100%;
}

.emotion-2[data-size='small'] {
  height: 2rem;
  padding-left: 0.5rem;
}

.emotion-2[data-size='medium'] {
  height: 2.5rem;
}

.emotion-2[data-size='large'] {
  height: 3rem;
}

.emotion-2[data-state='neutral'] {
  border: 1px solid #d9dadd;
}

.emotion-2[data-state='neutral']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-2[data-state='neutral']:not([data-disabled='true']):hover {
  border-color: #792dd4;
  outline: none;
}

.emotion-2[data-state='neutral']:not([data-disabled='true']):focus-visible {
  outline: 5px auto Highlight;
  outline: 5px auto -webkit-focus-ring-color;
}

.emotion-2[data-state='neutral'][data-dropdownvisible='true'] {
  border-color: #792dd4;
}

.emotion-2[data-state='success'] {
  border: 1px solid #22674e;
}

.emotion-2[data-state='success']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #1b533f;
  box-shadow: 0px 0px 0px 3px #45d19f40;
}

.emotion-2[data-state='success'][data-dropdownvisible='true'] {
  border-color: #1b533f;
}

.emotion-2[data-state='danger'] {
  border: 1px solid #b3144d;
}

.emotion-2[data-state='danger']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #92103f;
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-2[data-state='danger'][data-dropdownvisible='true'] {
  border-color: #92103f;
}

.emotion-2:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-2[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
  cursor: default;
}

.emotion-2[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.emotion-4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-6 {
  padding-right: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        aria-label="test"
        class="emotion-0 emotion-1"
      >
        <div
          aria-controls="«r6»"
          aria-describedby="«r6»"
          class="uv_w40vpo9 uv_w40vpob"
          tabindex="-1"
        >
          <div
            class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          >
            <div
              aria-controls="«r6»"
              aria-expanded="false"
              aria-label=""
              class="emotion-2 emotion-3"
              data-disabled="true"
              data-dropdownvisible="false"
              data-readonly="false"
              data-size="large"
              data-state="neutral"
              data-testid="select-input-test"
              id="«r5»"
              role="combobox"
              tabindex="0"
            >
              <span
                class="emotion-4 emotion-5 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owm uv_m4c9ow1a uv_m4c9ow33"
              >
                Select item
              </span>
              <div
                class="emotion-6 emotion-7 uv_toi52u0 uv_toi52u3d uv_toi52u2j uv_toi52u7d uv_toi52u7 uv_toi52u5d"
              >
                <svg
                  aria-label="show dropdown"
                  class="styles__1sbwqkz0 styles_prominence_default__1sbwqkzg styles_disabled_true__1sbwqkze styles_sentiment_neutral__1sbwqkz3 styles_size_small__1sbwqkza styles_undefined_compound_2__1sbwqkzm"
                  viewBox="0 0 16 16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`selectInputField > should render correctly grouped 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
}

.emotion-2 {
  display: grid;
  width: 100%;
  gap: 0.5rem;
  grid-template-columns: 1fr auto;
  padding: 0.5rem;
  padding-right: 0;
  padding-left: 1rem;
  cursor: pointer;
  box-shadow: none;
  background: #ffffff;
  border-radius: 0.25rem;
  width: 100%;
}

.emotion-2[data-size='small'] {
  height: 2rem;
  padding-left: 0.5rem;
}

.emotion-2[data-size='medium'] {
  height: 2.5rem;
}

.emotion-2[data-size='large'] {
  height: 3rem;
}

.emotion-2[data-state='neutral'] {
  border: 1px solid #d9dadd;
}

.emotion-2[data-state='neutral']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-2[data-state='neutral']:not([data-disabled='true']):hover {
  border-color: #792dd4;
  outline: none;
}

.emotion-2[data-state='neutral']:not([data-disabled='true']):focus-visible {
  outline: 5px auto Highlight;
  outline: 5px auto -webkit-focus-ring-color;
}

.emotion-2[data-state='neutral'][data-dropdownvisible='true'] {
  border-color: #792dd4;
}

.emotion-2[data-state='success'] {
  border: 1px solid #22674e;
}

.emotion-2[data-state='success']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #1b533f;
  box-shadow: 0px 0px 0px 3px #45d19f40;
}

.emotion-2[data-state='success'][data-dropdownvisible='true'] {
  border-color: #1b533f;
}

.emotion-2[data-state='danger'] {
  border: 1px solid #b3144d;
}

.emotion-2[data-state='danger']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #92103f;
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-2[data-state='danger'][data-dropdownvisible='true'] {
  border-color: #92103f;
}

.emotion-2:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-2[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
  cursor: default;
}

.emotion-2[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.emotion-4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-6 {
  padding-right: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        aria-label="test"
        class="emotion-0 emotion-1"
      >
        <div
          aria-controls="«rg»"
          aria-describedby="«rg»"
          class="uv_w40vpo9 uv_w40vpob"
          tabindex="-1"
        >
          <div
            class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          >
            <div
              aria-controls="«rg»"
              aria-expanded="false"
              aria-label=""
              class="emotion-2 emotion-3"
              data-disabled="false"
              data-dropdownvisible="false"
              data-readonly="false"
              data-size="large"
              data-state="neutral"
              data-testid="select-input-test"
              id="«rf»"
              role="combobox"
              tabindex="0"
            >
              <span
                class="emotion-4 emotion-5 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owm uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
              >
                Select item
              </span>
              <div
                class="emotion-6 emotion-7 uv_toi52u0 uv_toi52u3d uv_toi52u2j uv_toi52u7d uv_toi52u7 uv_toi52u5d"
              >
                <svg
                  aria-label="show dropdown"
                  class="styles__1sbwqkz0 styles_prominence_default__1sbwqkzg styles_disabled_false__1sbwqkzf styles_sentiment_neutral__1sbwqkz3 styles_size_small__1sbwqkza styles_undefined_compound_34__1sbwqkz1i"
                  viewBox="0 0 16 16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`selectInputField > should render correctly multiselect 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
}

.emotion-2 {
  display: grid;
  width: 100%;
  gap: 0.5rem;
  grid-template-columns: 1fr auto;
  padding: 0.5rem;
  padding-right: 0;
  padding-left: 1rem;
  cursor: pointer;
  box-shadow: none;
  background: #ffffff;
  border-radius: 0.25rem;
  width: 100%;
}

.emotion-2[data-size='small'] {
  height: 2rem;
  padding-left: 0.5rem;
}

.emotion-2[data-size='medium'] {
  height: 2.5rem;
}

.emotion-2[data-size='large'] {
  height: 3rem;
}

.emotion-2[data-state='neutral'] {
  border: 1px solid #d9dadd;
}

.emotion-2[data-state='neutral']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-2[data-state='neutral']:not([data-disabled='true']):hover {
  border-color: #792dd4;
  outline: none;
}

.emotion-2[data-state='neutral']:not([data-disabled='true']):focus-visible {
  outline: 5px auto Highlight;
  outline: 5px auto -webkit-focus-ring-color;
}

.emotion-2[data-state='neutral'][data-dropdownvisible='true'] {
  border-color: #792dd4;
}

.emotion-2[data-state='success'] {
  border: 1px solid #22674e;
}

.emotion-2[data-state='success']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #1b533f;
  box-shadow: 0px 0px 0px 3px #45d19f40;
}

.emotion-2[data-state='success'][data-dropdownvisible='true'] {
  border-color: #1b533f;
}

.emotion-2[data-state='danger'] {
  border: 1px solid #b3144d;
}

.emotion-2[data-state='danger']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #92103f;
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-2[data-state='danger'][data-dropdownvisible='true'] {
  border-color: #92103f;
}

.emotion-2:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-2[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
  cursor: default;
}

.emotion-2[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.emotion-4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-6 {
  padding-right: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        aria-label="test"
        class="emotion-0 emotion-1"
      >
        <div
          aria-controls="«rb»"
          aria-describedby="«rb»"
          class="uv_w40vpo9 uv_w40vpob"
          tabindex="-1"
        >
          <div
            class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          >
            <div
              aria-controls="«rb»"
              aria-expanded="false"
              aria-label=""
              class="emotion-2 emotion-3"
              data-disabled="false"
              data-dropdownvisible="false"
              data-readonly="false"
              data-size="large"
              data-state="neutral"
              data-testid="select-input-test"
              id="«ra»"
              role="combobox"
              tabindex="0"
            >
              <span
                class="emotion-4 emotion-5 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owm uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
              >
                Select item
              </span>
              <div
                class="emotion-6 emotion-7 uv_toi52u0 uv_toi52u3d uv_toi52u2j uv_toi52u7d uv_toi52u7 uv_toi52u5d"
              >
                <svg
                  aria-label="show dropdown"
                  class="styles__1sbwqkz0 styles_prominence_default__1sbwqkzg styles_disabled_false__1sbwqkzf styles_sentiment_neutral__1sbwqkz3 styles_size_small__1sbwqkza styles_undefined_compound_34__1sbwqkz1i"
                  viewBox="0 0 16 16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`selectInputField > should trigger events 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
}

.emotion-2 {
  display: grid;
  width: 100%;
  gap: 0.5rem;
  grid-template-columns: 1fr auto;
  padding: 0.5rem;
  padding-right: 0;
  padding-left: 1rem;
  cursor: pointer;
  box-shadow: none;
  background: #ffffff;
  border-radius: 0.25rem;
  width: 100%;
}

.emotion-2[data-size='small'] {
  height: 2rem;
  padding-left: 0.5rem;
}

.emotion-2[data-size='medium'] {
  height: 2.5rem;
}

.emotion-2[data-size='large'] {
  height: 3rem;
}

.emotion-2[data-state='neutral'] {
  border: 1px solid #d9dadd;
}

.emotion-2[data-state='neutral']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-2[data-state='neutral']:not([data-disabled='true']):hover {
  border-color: #792dd4;
  outline: none;
}

.emotion-2[data-state='neutral']:not([data-disabled='true']):focus-visible {
  outline: 5px auto Highlight;
  outline: 5px auto -webkit-focus-ring-color;
}

.emotion-2[data-state='neutral'][data-dropdownvisible='true'] {
  border-color: #792dd4;
}

.emotion-2[data-state='success'] {
  border: 1px solid #22674e;
}

.emotion-2[data-state='success']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #1b533f;
  box-shadow: 0px 0px 0px 3px #45d19f40;
}

.emotion-2[data-state='success'][data-dropdownvisible='true'] {
  border-color: #1b533f;
}

.emotion-2[data-state='danger'] {
  border: 1px solid #b3144d;
}

.emotion-2[data-state='danger']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #92103f;
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-2[data-state='danger'][data-dropdownvisible='true'] {
  border-color: #92103f;
}

.emotion-2:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-2[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
  cursor: default;
}

.emotion-2[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.emotion-4 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-6 {
  padding-right: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        aria-label="test"
        class="emotion-0 emotion-1"
      >
        <div
          aria-controls="«r29»"
          aria-describedby="«r29»"
          class="uv_w40vpo9 uv_w40vpob"
          tabindex="-1"
        >
          <div
            class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          >
            <div
              aria-controls="«r29»"
              aria-expanded="false"
              aria-label=""
              class="emotion-2 emotion-3"
              data-disabled="false"
              data-dropdownvisible="false"
              data-readonly="false"
              data-size="large"
              data-state="neutral"
              data-testid="select-input-test"
              id="«r28»"
              role="combobox"
              tabindex="0"
            >
              <span
                class="emotion-4 emotion-5 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
              >
                Mercury
              </span>
              <div
                class="emotion-6 emotion-7 uv_toi52u0 uv_toi52u3d uv_toi52u2j uv_toi52u7d uv_toi52u7 uv_toi52u5d"
              >
                <svg
                  aria-label="show dropdown"
                  class="styles__1sbwqkz0 styles_prominence_default__1sbwqkzg styles_disabled_false__1sbwqkzf styles_sentiment_neutral__1sbwqkz3 styles_size_small__1sbwqkza styles_undefined_compound_34__1sbwqkz1i"
                  viewBox="0 0 16 16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
